[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/world/entrance.png" type="Texture" id=1]
[ext_resource path="res://assets/world/longnavpoly.tres" type="NavigationPolygon" id=2]
[ext_resource path="res://scenes/rooms/Entrance.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 128, 128 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 320 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 120, 20 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 640, 384 )

[node name="Entrance" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="."]
navpoly = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 100, 310 )
collision_layer = 512
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="CollisionLeft" type="StaticBody2D" parent="."]
position = Vector2( 640, 210 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionLeft"]
shape = SubResource( 3 )

[node name="CollisionRight" type="StaticBody2D" parent="."]
position = Vector2( 640, 390 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionRight"]
shape = SubResource( 3 )

[node name="CollisionBottom" type="StaticBody2D" parent="."]
position = Vector2( 160, 310 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionBottom"]
shape = SubResource( 4 )

[node name="AudioOutArea" type="Area2D" parent="."]
visible = false
position = Vector2( 640, 384 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AudioOutArea"]
shape = SubResource( 5 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="AudioOutArea" to="." method="_on_AudioOutArea_body_entered"]
[connection signal="body_exited" from="AudioOutArea" to="." method="_on_AudioOutArea_body_exited"]
